tests/lean/1074b.lean.expected.out
1074b.lean:10:30-10:31: error(lean.unknownIdentifier): Unknown identifier `z`
1074b.lean:11:43-11:53: error: Tactic `assumption` failed

a n z✝ : Term
a✝ : Brx z✝
⊢ Brx sorry
